--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "library",
     "autoload": {
         "psr-4": {
+            "PedroNN\\MailListQuality\\": "./MailListQuality/"
             "PedroNN\\MailListQuality\\": "src/"
         }
     },
